welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: Unit does not take parameters
      else(){
            ^